# ai-test-projects

equity_moves_pred/: requirements.txt
equity_moves_pred/old/: chatbot.py
equity_moves_pred/output/: chat_log.md
equity_moves_pred/prompts/: prediction_engine_prompts.py  prompts.py
equity_moves_pred/src/: crew.py  main.py  prediction_engine.py  predictor.py
fx_moves_pred/: README.md  pipeline_output.md  pyproject.toml  report.md  research_cc_task_country.md  research_fi_task.md  research_fi_task_country.md  research_fi_task_full.md
fx_moves_pred/db/: chroma.sqlite3
fx_moves_pred/src/fx_moves_pred/: crew.py  main.py  test.py
fx_moves_pred/src/fx_moves_pred/config/: agents.yaml  agents_archive.yaml  tasks.yaml  tasks_archive.yaml
mcp_test/src/: main.py  prompts.py  yf_test.py
